tests/negative/typecheck/dyn-type-not-trait.orng
fn main() -> Int {
    let y = 4
    let x: &dyn y = (4, 5)
    5
}